# step_voice

./: CMakeLists.txt  README  package.xml
data/: femalebot  fembot  introduction.txt  malebot  voice.dic  voice.lm  whisper_female  whisper_male
include/step_voice/: Voice.h  enum_comm.h
launch/: demon_voice.launch  interpreter.launch  recognizer.launch
src/: voice.cpp  voice_node.cpp
